--- a/apps/next/data/blog/nomi-first.mdx
+++ b/apps/next/data/blog/nomi-first.mdx
@@ -5,8 +5,17 @@ description: first post in Nomi
 by: fieryzig
 ---
 
+<div style="margin: 20px">
+
 # Welcome to ~Nomi
 
 this is the first post in ~Nomi
 
 🎉🎉🎉
+
+
+## 测试
+
+测试一下CI效果？
+  
+</div>
