--- a/apps/next/data/blog/nomi-first.mdx
+++ b/apps/next/data/blog/nomi-first.mdx
@@ -5,7 +5,7 @@ description: first post in Nomi
 by: fieryzig
 ---
 
-<div style="margin: 20px">
+<div style={{ margin: "20px"}} >
 
 # Welcome to ~Nomi
 
